<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanMedia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/library_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_head"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/track_scanner_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_track"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/artist_scanner_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_artist"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/album_scanner_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_album"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/deleted_tracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_deleted_track"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_button" />

        <Button
            android:id="@+id/recreate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recreate_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>